--- a/assets/css/_settings.scss
+++ b/assets/css/_settings.scss
@@ -30,6 +30,7 @@ $black: #000;
 $white: #fff;
 $blackShadow: rgba(0, 0, 0, 0.25);
 $whiteShadow: rgba(255, 255, 255, 0.25);
+$whiteOverlay: rgba(255, 255, 255, 0.2);
 
 //general
 
@@ -39,6 +40,10 @@ $whiteShadow: rgba(255, 255, 255, 0.25);
   box-sizing: border-box;
   font-family: $font3;
   color: $black;
+}
+
+body {
+  text-align: center;
 }
 
 h1,
