--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -19,6 +19,10 @@
   color: #000;
 }
 
+body {
+  text-align: center;
+}
+
 h1,
 h2,
 h3,
@@ -51,6 +55,23 @@ button {
 }
 button a {
   color: #ea4240;
+  border: 3px solid #ea4240;
+  border-radius: 360px;
+  padding: 5px 20px;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+}
+button a:hover {
+  background: #ea4240;
+  color: #fff;
+}
+
+.buttonIcon {
+  border: none;
+  background: none;
+}
+.buttonIcon a {
+  color: #ea4240;
   display: grid;
   grid-template-columns: 20% 80%;
   -webkit-box-pack: start;
@@ -64,12 +85,13 @@ button a {
   padding: 0 10px 0 0;
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
+  background: rgba(255, 255, 255, 0.25);
 }
-button a:hover {
+.buttonIcon a:hover {
   background: #ea4240;
   color: #fff;
 }
-button a i {
+.buttonIcon a i {
   padding: 10px;
   background: #ea4240;
   color: #fff;
@@ -77,11 +99,90 @@ button a i {
   border: 3px solid #ea4240;
 }
 
+.buttonIconRight {
+  border: none;
+  background: none;
+}
+.buttonIconRight a {
+  background: rgba(255, 255, 255, 0.25);
+  color: #ea4240;
+  display: grid;
+  grid-template-columns: 73% 27%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 3px solid #ea4240;
+  border-radius: 360px;
+  padding: 0 0 0 10px;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+}
+.buttonIconRight a:hover {
+  background: #ea4240;
+  color: #fff;
+}
+.buttonIconRight a i {
+  font-size: 1.3rem;
+  padding: 10px;
+  margin-left: 5px;
+  background: #ea4240;
+  color: #fff;
+  border-radius: 360px;
+  border: 3px solid #ea4240;
+}
+
+#accueil .buttonIconRight {
+  width: 200px;
+}
+#accueil .buttonIconRight a {
+  background: rgba(255, 255, 255, 0.25);
+}
+#accueil .buttonIconRight a:hover {
+  background: #ea4240;
+  color: #fff;
+}
+
+.cta {
+  background: url(../img/union.webp) center/cover;
+}
+.cta .overlay {
+  padding: 50px;
+  background: rgba(255, 255, 255, 0.2);
+}
+.cta .overlay h2 {
+  color: #fff;
+  text-shadow: 0 0 5px #000;
+  font-size: 2rem;
+  padding-bottom: 30px;
+}
+.cta .overlay p {
+  padding-bottom: 40px;
+}
+.cta .overlay button a {
+  background: #ea4240;
+  color: #fff;
+}
+.cta .overlay button a:hover {
+  background: rgba(255, 255, 255, 0.25);
+  color: #ea4240;
+}
+
 header .barre-sup {
   padding: 20px 50px;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 70% 30%;
   border-bottom: 1px solid #f1f1f1;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  z-index: 100000000000000000000000000000000000000000;
 }
 header .barre-sup .menu-barre-sup {
   display: -webkit-box;
@@ -95,6 +196,43 @@ header .barre-sup .menu-barre-sup {
           align-items: center;
   gap: 30px;
 }
+header .barre-sup .menu-barre-sup img {
+  width: 20%;
+}
+header .barre-sup .menu-barre-sup .menuIcons {
+  display: none;
+}
+header .barre-sup .menu-barre-sup nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+header .barre-sup .menu-barre-sup nav ul li {
+  list-style: none;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  padding: 0 10px;
+  cursor: pointer;
+}
+header .barre-sup .menu-barre-sup nav ul li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+header .barre-sup .menu-barre-sup nav ul li a i {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  -webkit-transform: translateY(10%);
+          transform: translateY(10%);
+}
+header .barre-sup .menu-barre-sup nav ul li a i:hover {
+  color: #ea4240;
+}
 header .barre-sup div:last-of-type {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -103,10 +241,106 @@ header .barre-sup div:last-of-type {
       -ms-flex-pack: end;
           justify-content: end;
 }
-header .barre-nav nav ul li a {
-  font-family: "fira-sans-condensed-regular", "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  font-size: 1.6rem;
+
+main {
+  margin-top: 210px;
 }
-header .barre-nav nav ul li a i {
-  font-size: 1.4rem;
+
+footer {
+  font-size: 0.9rem;
+}
+footer p,
+footer a {
+  font-size: 0.9rem;
+}
+footer .footer-sup {
+  background: #ea4240;
+  padding: 20px 0;
+}
+footer .footer-sup ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+footer .footer-sup ul li {
+  list-style: none;
+  padding: 0 10px;
+}
+footer .footer-sup ul li a {
+  color: #fff;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+footer .footer-sup ul li a:hover {
+  color: #000;
+}
+footer .footer-copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px 0;
+}
+footer .footer-copyright .heart {
+  color: #ea4240;
+}
+
+#accueil {
+  text-align: center;
+  background: url(../img/union.webp) center/cover;
+}
+#accueil header {
+  height: 60vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#accueil header img {
+  width: 450px;
+  -webkit-filter: drop-shadow(0 0 10px #fff);
+          filter: drop-shadow(0 0 10px #fff);
+}
+#accueil main {
+  height: 30vh;
+  margin-top: 0;
+}
+#accueil main h1 {
+  padding-bottom: 40px;
+  color: #000;
+  text-shadow: 0 0 10px #fff;
+}
+#accueil footer {
+  height: 10vh;
+  background: #ea4240;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#accueil footer p,
+#accueil footer a {
+  color: #fff;
+  font-size: 0.9rem;
 }/*# sourceMappingURL=index.css.map */
