--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,6 +1,8 @@
 @import "./settings";
 @import "./components/buttons";
+@import "./components/cta";
 @import "./layout/header";
 @import "./layout/main";
 @import "./layout/footer";
+@import "./pages/page-accueil";
 @import "./pages/home";
