--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -1,2 +1,40 @@
 footer {
+  p,
+  a {
+    font-size: 0.9rem;
+  }
+  font-size: 0.9rem;
+  .footer-sup {
+    background: $color1;
+    padding: 20px 0;
+
+    ul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      li {
+        list-style: none;
+        padding: 0 10px;
+
+        a {
+          color: $white;
+          transition: 0.2s;
+
+          &:hover {
+            color: $black;
+          }
+        }
+      }
+    }
+  }
+  .footer-copyright {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+
+    .heart {
+      color: $color1;
+    }
+  }
 }
