--- a/assets/css/_settings.scss
+++ b/assets/css/_settings.scss
@@ -15,11 +15,18 @@
   src: url(../fonts/Poppins/Poppins-Regular.ttf);
 }
 
+@font-face {
+  font-family: "poppins-bold";
+  src: url(../fonts/Poppins/Poppins-Bold.ttf);
+}
+
 $font1: "fira-sans-condensed-semi-bold", "Trebuchet MS", "Lucida Sans Unicode",
   "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 $font2: "fira-sans-condensed-regular", "Trebuchet MS", "Lucida Sans Unicode",
   "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 $font3: "poppins", "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+  "Lucida Sans", Arial, sans-serif;
+$font4: "poppins-bold", "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
   "Lucida Sans", Arial, sans-serif;
 
 //colors
@@ -68,4 +75,8 @@ a {
   &:hover {
     color: $color1;
   }
+}
+
+strong {
+  font-family: $font4;
 }
