--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,6 +10,10 @@
   font-family: "poppins";
   src: url(../fonts/Poppins/Poppins-Regular.ttf);
 }
+@font-face {
+  font-family: "poppins-bold";
+  src: url(../fonts/Poppins/Poppins-Bold.ttf);
+}
 * {
   margin: 0;
   padding: 0;
@@ -47,6 +51,10 @@ a {
 }
 a:hover {
   color: #ea4240;
+}
+
+strong {
+  font-family: "poppins-bold", "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
 button {
@@ -171,9 +179,9 @@ button a:hover {
 }
 
 header .barre-sup {
-  padding: 20px 50px;
+  padding: 10px 50px;
   display: grid;
-  grid-template-columns: 70% 30%;
+  grid-template-columns: 60% 40%;
   border-bottom: 1px solid #f1f1f1;
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
@@ -197,7 +205,7 @@ header .barre-sup .menu-barre-sup {
   gap: 30px;
 }
 header .barre-sup .menu-barre-sup img {
-  width: 20%;
+  width: 15%;
 }
 header .barre-sup .menu-barre-sup .menuIcons {
   display: none;
@@ -241,9 +249,31 @@ header .barre-sup div:last-of-type {
       -ms-flex-pack: end;
           justify-content: end;
 }
+header .barre-sup div:last-of-type button {
+  margin: 0 10px;
+}
+header .barre-sup div:last-of-type button:first-of-type {
+  width: 230px;
+}
+header .barre-sup div:last-of-type button:last-of-type {
+  width: 200px;
+}
+header .barre-sup div:last-of-type button i {
+  width: 40px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 
 main {
-  margin-top: 210px;
+  margin-top: 112px;
 }
 
 footer {
@@ -343,4 +373,28 @@ footer .footer-copyright .heart {
 #accueil footer a {
   color: #fff;
   font-size: 0.9rem;
+}
+
+.hero {
+  padding: 50px;
+}
+.hero .hero-container {
+  display: grid;
+  grid-template-columns: 20% 80%;
+}
+.hero .hero-container .lettre-secretaire {
+  border: 3px solid #ea4240;
+  padding: 30px;
+}
+.hero .hero-container .lettre-secretaire h2 {
+  text-align: center;
+  padding-bottom: 30px;
+}
+.hero .hero-container .lettre-secretaire .signature {
+  font-size: 0.9rem;
+  text-align: right;
+}
+.hero .hero-container .lettre-secretaire ul li {
+  text-align: justify;
+  list-style-position: inside;
 }/*# sourceMappingURL=index.css.map */
