--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -1,8 +1,8 @@
 header {
   .barre-sup {
-    padding: 20px 50px;
+    padding: 10px 50px;
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 60% 40%;
     border-bottom: 1px solid $border;
     box-shadow: 0 0 5px $blackShadow;
     position: fixed;
@@ -19,7 +19,7 @@ header {
       gap: 30px;
 
       img {
-        width: 20%;
+        width: 15%;
       }
 
       .menuIcons {
@@ -59,6 +59,25 @@ header {
       &:last-of-type {
         display: flex;
         justify-content: end;
+
+        button {
+          margin: 0 10px;
+
+          &:first-of-type {
+            width: 230px;
+          }
+
+          &:last-of-type {
+            width: 200px;
+          }
+          i {
+            width: 40px;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+        }
       }
     }
   }
