--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -380,7 +380,35 @@ footer .footer-copyright .heart {
 }
 .hero .hero-container {
   display: grid;
-  grid-template-columns: 20% 80%;
+  grid-template-columns: 1fr 3fr 1fr;
+  gap: 20px;
+}
+.hero .hero-container .items-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+.hero .hero-container .items-container .item {
+  border: 1px solid #ea4240;
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px;
+}
+.hero .hero-container .items-container .item i {
+  padding-bottom: 30px;
 }
 .hero .hero-container .lettre-secretaire {
   border: 3px solid #ea4240;
