--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -2,7 +2,29 @@
   padding: 50px;
   .hero-container {
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 1fr 3fr 1fr;
+    gap: 20px;
+
+    .items-container {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 20px;
+
+      .item {
+        border: 1px solid $color1;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+
+        i {
+          padding-bottom: 30px;
+        }
+      }
+    }
 
     .lettre-secretaire {
       border: 3px solid $color1;
