--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -7,10 +7,12 @@ button {
     border-radius: 360px;
     padding: 5px 20px;
     transition: 0.2s ease-in-out;
+    text-shadow: 0 0 5px $white;
 
     &:hover {
       background: $color1;
       color: $white;
+      text-shadow: 0 0 5px $color1;
     }
   }
 }
@@ -29,10 +31,12 @@ button {
     padding: 0 10px 0 0;
     transition: 0.2s ease-in-out;
     background: $whiteShadow;
+    text-shadow: 0 0 5px $white;
 
     &:hover {
       background: $color1;
       color: $white;
+      text-shadow: 0 0 5px $color1;
     }
 
     i {
@@ -41,6 +45,7 @@ button {
       color: $white;
       border-radius: 360px;
       border: 3px solid $color1;
+      text-shadow: 0 0 5px $color1;
     }
   }
 }
@@ -50,7 +55,6 @@ button {
   background: none;
   a {
     background: $whiteShadow;
-
     color: $color1;
     display: grid;
     grid-template-columns: 73% 27%;
@@ -60,6 +64,7 @@ button {
     border-radius: 360px;
     padding: 0 0 0 10px;
     transition: 0.2s ease-in-out;
+    text-shadow: 0 0 5px $white;
 
     &:hover {
       background: $color1;
@@ -74,6 +79,7 @@ button {
       color: $white;
       border-radius: 360px;
       border: 3px solid $color1;
+      text-shadow: 0 0 5px $color1;
     }
   }
 }
