--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -1,18 +1,18 @@
 button {
   border: none;
   background: none;
+
   a {
+    text-transform: uppercase;
     color: $color1;
     border: 3px solid $color1;
     border-radius: 360px;
     padding: 5px 20px;
     transition: 0.2s ease-in-out;
-    text-shadow: 0 0 5px $white;
 
     &:hover {
       background: $color1;
       color: $white;
-      text-shadow: 0 0 5px $color1;
     }
   }
 }
@@ -30,7 +30,7 @@ button {
     border-radius: 360px;
     padding: 0 10px 0 0;
     transition: 0.2s ease-in-out;
-    background: $whiteShadow;
+    background: $white;
     text-shadow: 0 0 5px $white;
 
     &:hover {
@@ -54,7 +54,7 @@ button {
   border: none;
   background: none;
   a {
-    background: $whiteShadow;
+    background: transparent;
     color: $color1;
     display: grid;
     grid-template-columns: 73% 27%;
@@ -69,6 +69,7 @@ button {
     &:hover {
       background: $color1;
       color: $white;
+      text-shadow: 0 0 5px $color1;
     }
 
     i {
@@ -94,6 +95,47 @@ button {
       &:hover {
         background: $color1;
         color: $white;
+        text-shadow: 0 0 5px $color1;
+      }
+    }
+  }
+}
+
+.buttonScrollDown {
+  border: none;
+  background: none;
+  a {
+    width: 100%;
+    height: 100%;
+    background: none;
+    border: none;
+
+    &:hover {
+      background: none;
+      border: none;
+    }
+    i {
+      position: absolute;
+      bottom: -35px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: $color1;
+      box-shadow: 0 0 5px $blackShadow;
+      border: 3px solid $color1;
+      border-radius: 360px;
+      width: 70px;
+      height: 70px;
+      color: $white;
+      text-shadow: none;
+      font-size: 1.5rem;
+      transition: 0.2s;
+
+      &:hover {
+        background: $black;
+        color: $white;
+        border: 3px solid $black;
+        transform: scale(1.05);
       }
     }
   }
