--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -11,7 +11,7 @@ button {
     transition: 0.2s ease-in-out;
 
     &:hover {
-      background: $color1;
+      background: $degrade;
       color: $white;
     }
   }
@@ -34,17 +34,16 @@ button {
     text-shadow: 0 0 5px $white;
 
     &:hover {
-      background: $color1;
+      background: $degrade;
       color: $white;
       text-shadow: 0 0 5px $color1;
     }
 
     i {
-      padding: 10px;
-      background: $color1;
+      padding: 12px 10px;
+      background: $degrade;
       color: $white;
       border-radius: 360px;
-      border: 3px solid $color1;
       text-shadow: 0 0 5px $color1;
     }
   }
@@ -67,7 +66,7 @@ button {
     text-shadow: 0 0 5px $white;
 
     &:hover {
-      background: $color1;
+      background: $degrade;
       color: $white;
       text-shadow: 0 0 5px $color1;
     }
@@ -76,7 +75,7 @@ button {
       font-size: 1.3rem;
       padding: 10px;
       margin-left: 5px;
-      background: $color1;
+      background: $degrade;
       color: $white;
       border-radius: 360px;
       border: 3px solid $color1;
@@ -93,7 +92,7 @@ button {
       background: $whiteShadow;
 
       &:hover {
-        background: $color1;
+        background: $degrade;
         color: $white;
         text-shadow: 0 0 5px $color1;
       }
@@ -104,12 +103,13 @@ button {
 .buttonScrollDown {
   border: none;
   background: none;
+  transition: 0.2s;
   a {
     width: 100%;
     height: 100%;
     background: none;
     border: none;
-
+    transition: 0.2s;
     &:hover {
       background: none;
       border: none;
@@ -120,9 +120,9 @@ button {
       display: flex;
       justify-content: center;
       align-items: center;
-      background: $color1;
+      background: $degrade;
       box-shadow: 0 0 5px $blackShadow;
-      border: 3px solid $color1;
+      border: none;
       border-radius: 360px;
       width: 70px;
       height: 70px;
@@ -132,10 +132,7 @@ button {
       transition: 0.2s;
 
       &:hover {
-        background: $black;
-        color: $white;
-        border: 3px solid $black;
-        transform: scale(1.05);
+        transform: scale(1.1);
       }
     }
   }
