--- a/assets/css/components/_cta.scss
+++ b/assets/css/components/_cta.scss
@@ -1,5 +1,5 @@
 .cta {
-  background: url(../img/union.webp) center/cover;
+  background: url(../img/cta.webp) center/cover;
 
   .overlay {
     padding: 50px;
@@ -14,6 +14,7 @@
 
     p {
       padding-bottom: 40px;
+      text-shadow: 0 0 5px $white;
     }
 
     button {
