--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -105,7 +105,7 @@ header {
                   }
 
                   &:hover {
-                    background: $color1;
+                    background: $degrade;
 
                     a {
                       color: $white;
