--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: url(../img/union.webp) center/cover;
+  background: url(../img/hero.webp) center/cover;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,9 +10,6 @@
     border-radius: 10px;
     padding: 50px;
     box-shadow: 0 0 5px $blackShadow;
-
-    // width: 100%;
-    // height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,32 +26,104 @@
 }
 
 #categories {
-  padding: 50px;
+  height: 100vh;
+  padding: 120px 50px 50px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
+  justify-content: center;
+  align-items: center;
 
-  .item {
-    // border: 3px solid $color1;
-    height: 250px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    background: url(../img/union-carre.webp) center/cover;
-    box-shadow: 0 0 5px $blackShadow;
+  a {
     border-radius: 10px;
+    background: $degrade;
+    height: 250px;
 
-    h2 {
-      background: $whiteBg;
+    .item {
+      height: 250px;
+      width: 100%;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 100%;
-      height: 100%;
       border-radius: 10px;
+
+      h2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        background: $degrade2;
+        color: $white;
+        letter-spacing: 1px;
+        text-shadow: 0 0 5px $blackShadow;
+        box-shadow: 0 0 5px $blackShadow;
+        // padding: 20px;
+
+        transition: 0.2s ease-in;
+
+        &:hover {
+          box-shadow: 0 0 10px $blackShadow;
+          background: $degrade;
+          transform: scale(1.05);
+        }
+      }
+    }
+  }
+}
+
+.lettre {
+  padding: 20px 50px 50px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  .img-lettre {
+    width: 100%;
+    img {
+      box-shadow: 0 0 5px $blackShadow;
+      border-radius: 10px;
+    }
+  }
+
+  .texte-lettre {
+    background: $degrade;
+    box-shadow: 0 0 5px $blackShadow;
+    border-radius: 10px;
+    padding: 50px;
+    margin: 50px 0 0 -150px;
+
+    h2 {
+      color: $white;
+      margin-bottom: 30px;
+      text-align: left;
+      text-transform: uppercase;
+
+      &:after {
+        margin-top: 20px;
+        display: block;
+        content: "   ";
+        height: 1px;
+        width: 50px;
+        border-top: 3px solid $white;
+      }
+    }
+    p {
+      color: $white;
+      text-align: left;
+      font-size: 0.9rem;
+
+      .signature {
+        font-weight: bold;
+        color: $white;
+
+        .small {
+          font-weight: normal;
+          font-size: 0.8rem;
+          color: $white;
+        }
+      }
     }
   }
 }
